# backend-go/internal/handler/category_handler.go
@@ -16,6 +16,17 @@ func NewCategoryHandler(service service.CategoryService) *CategoryHandler {
 	return &CategoryHandler{service}
 }
 
+// CreateCategory godoc
+// @Summary Create a new category
+// @Description Create a new category for transactions
+// @Tags categories
+// @Accept json
+// @Produce json
+// @Param category body service.CreateCategoryInput true "Category Input"
+// @Success 201 {object} entity.Category
+// @Failure 400 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/categories [post]
 func (h *CategoryHandler) CreateCategory(c *fiber.Ctx) error {
 	userID := c.Locals("user_id").(uint)
 
@@ -32,6 +43,15 @@ func (h *CategoryHandler) CreateCategory(c *fiber.Ctx) error {
 	return c.Status(http.StatusCreated).JSON(category)
 }
 
+// GetCategories godoc
+// @Summary Get all categories
+// @Description Get all categories for the logged in user
+// @Tags categories
+// @Accept json
+// @Produce json
+// @Success 200 {array} entity.Category
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/categories [get]
 func (h *CategoryHandler) GetCategories(c *fiber.Ctx) error {
 	userID := c.Locals("user_id").(uint)
 
@@ -43,6 +63,16 @@ func (h *CategoryHandler) GetCategories(c *fiber.Ctx) error {
 	return c.JSON(categories)
 }
 
+// GetCategory godoc
+// @Summary Get a category by ID
+// @Description Get a specific category
+// @Tags categories
+// @Accept json
+// @Produce json
+// @Param id path int true "Category ID"
+// @Success 200 {object} entity.Category
+// @Failure 404 {object} map[string]interface{}
+// @Router /api/categories/{id} [get]
 func (h *CategoryHandler) GetCategory(c *fiber.Ctx) error {
 	userID := c.Locals("user_id").(uint)
 	id, _ := strconv.Atoi(c.Params("id"))
@@ -55,6 +85,18 @@ func (h *CategoryHandler) GetCategory(c *fiber.Ctx) error {
 	return c.JSON(category)
 }
 
+// UpdateCategory godoc
+// @Summary Update a category
+// @Description Update category details
+// @Tags categories
+// @Accept json
+// @Produce json
+// @Param id path int true "Category ID"
+// @Param category body service.UpdateCategoryInput true "Update Category Input"
+// @Success 200 {object} entity.Category
+// @Failure 400 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/categories/{id} [put]
 func (h *CategoryHandler) UpdateCategory(c *fiber.Ctx) error {
 	userID := c.Locals("user_id").(uint)
 	id, _ := strconv.Atoi(c.Params("id"))
@@ -72,6 +114,16 @@ func (h *CategoryHandler) UpdateCategory(c *fiber.Ctx) error {
 	return c.JSON(category)
 }
 
+// DeleteCategory godoc
+// @Summary Delete a category
+// @Description Delete a category by ID
+// @Tags categories
+// @Accept json
+// @Produce json
+// @Param id path int true "Category ID"
+// @Success 200 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/categories/{id} [delete]
 func (h *CategoryHandler) DeleteCategory(c *fiber.Ctx) error {
 	userID := c.Locals("user_id").(uint)
 	id, _ := strconv.Atoi(c.Params("id"))
